fix: grid component wrap props error (#216)
* perf: extra grid basic logic

* docs: update docs

--- a/packages/vue/src/grid-group/index.less
+++ b/packages/vue/src/grid-group/index.less
@@ -17,78 +17,5 @@
     &--wrap-reverse {
       flex-wrap: wrap-reverse;
     }
-    &--xs {
-      flex-grow: var(--xs-grow);
-      max-width: var(--xs-width);
-      flex-basis: var(--xs-basis);
-      display: inherit;
-      &-0 {
-        display: none;
-      }
-    }
-  }
-}
-
-@media only screen and(min-width:650px) {
-  .fect-grid {
-    &__group {
-      &--sm {
-        flex-grow: var(--sm-grow);
-        max-width: var(--sm-width);
-        flex-basis: var(--sm-basis);
-        display: inherit;
-        &-0 {
-          display: none;
-        }
-      }
-    }
-  }
-}
-
-@media only screen and(min-width:900px) {
-  .fect-grid {
-    &__group {
-      &--md {
-        flex-grow: var(--md-grow);
-        max-width: var(--md-width);
-        flex-basis: var(--md-basis);
-        display: inherit;
-        &-0 {
-          display: none;
-        }
-      }
-    }
-  }
-}
-
-@media only screen and(min-width:1280px) {
-  .fect-grid {
-    &__group {
-      &--lg {
-        flex-grow: var(--lg-grow);
-        max-width: var(--lg-width);
-        flex-basis: var(--lg-basis);
-        display: inherit;
-        &-0 {
-          display: none;
-        }
-      }
-    }
-  }
-}
-
-@media only screen and(min-width:1920px) {
-  .fect-grid {
-    &__group {
-      &--xl {
-        flex-grow: var(--xl-grow);
-        max-width: var(--xl-width);
-        flex-basis: var(--xl-basis);
-        display: inherit;
-        &-0 {
-          display: none;
-        }
-      }
-    }
   }
 }
